Fixed an iteration bug of tileentity list Fixed adding data to vertexbuffer twice Fixed a small typo (huge performance improvement for updating chunk rendering cache) Redesign structures way of loading & saving child tiles (performance improvement)